--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,6 +45,7 @@ const cards = [
             grid-column-gap: 16px;
             grid-row-gap: 16px;
             grid-auto-flow: row;
+            margin-top:32px;
         }
         .card {
             border: 1px solid #ccc;
@@ -57,6 +58,9 @@ const cards = [
         }
         .card div:nth-child(2) {
             flex-grow: 1;
+        }
+        .card {
+          padding:16px;
         }
     </style>
 
