--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,6 +6,7 @@
 @font-face {
   font-family: "Noto Sans";
   src: url("/fonts/NotoSans/NotoSans-Regular.ttf") format("truetype");
+  font-display: swap;
 }
 body {
   font-size: 16px;
