--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -36,7 +36,7 @@ const shownTitle = title ? title + ` | Axelar Documentation` : 'Axelar Documenta
     }
     <link rel="stylesheet" href="/styles/prism.css"/>
 
-    <script src="/src/scripts/prism.js"></script>
+    <script src="/src/scripts/index.ts"></script>
   </head>
   <body>
     <nav style="display:flex;">
