--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,4 @@
 ---
-import MainLayout from "../layouts/MainLayout.astro";
 import Section from "../layouts/Section.astro";
 const title = "What is Axelar?";
 
@@ -31,9 +30,9 @@ const cards = [
 <Section title={title}>
     
     Axelar delivers secure cross-chain communication for Web3, enabling you to
-    build Interchain dApps that grow beyond a single chain. _Secure_ means
+    build Interchain dApps that grow beyond a single chain. <em>Secure</em> means
     Axelar is built on proof-of-stake, the battle-tested approach used by
-    Ethereum, Polygon, Cosmos, and more. _Cross-chain communication_ means you
+    Ethereum, Polygon, Cosmos, and more. <em>Cross-chain communication</em> means you
     can build a complete experience for your users that lets them interact with
     any asset, any application, on any chain with one click.
 
