--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,6 @@
+$page-width: 1400px;
+
+
 * {
   margin: 0;
   padding: 0;
@@ -45,6 +48,8 @@ nav {
   display: flex;
   align-items: center;
   border-bottom: 1px solid #e1e1e1;
+  max-width:$page-width;
+  margin: 0px auto;
 }
 nav a {
   margin: 16px;
@@ -61,6 +66,8 @@ footer {
 footer .columns {
   display: flex;
   justify-content: space-around;
+  max-width:$page-width;
+  margin: 0px auto;
 }
 footer > div {
   padding: 16px;
@@ -71,6 +78,8 @@ main {
 }
 #page {
   display: flex;
+  max-width:$page-width;
+  margin: 0px auto;
 }
 #search {
   flex-grow:1;
@@ -82,6 +91,7 @@ main {
 }
 .mainBody {
   flex: 1;
+  min-width:0;
 }
 .sideNav {
   width: 300px;
@@ -129,12 +139,23 @@ main {
 }
 
 /* Component Styles */
-.tabs li {
+tabs li {
   display:inline;
   border:1px solid grey;
   padding:8px;
   border-radius:8px 8px 0 0;
   margin-right:-1px;
+}
+tabs button {
+  border:0px;
+  background-color:transparent;
+  color:inherit;
+}
+tab-item {
+  display: none;
+}
+tab-item.active {
+  display:block;
 }
 
 .callout {
