--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,5 @@
 $page-width: 1400px;
 
-
 * {
   margin: 0;
   padding: 0;
@@ -37,8 +36,12 @@ h2 {
   font-weight: 700;
   margin: 1rem 0;
 }
-h1,h2,h3,h4,h5 {
-  line-height:1.2em;
+h1,
+h2,
+h3,
+h4,
+h5 {
+  line-height: 1.2em;
 }
 p {
   margin: 1rem 0;
@@ -48,7 +51,7 @@ nav {
   display: flex;
   align-items: center;
   border-bottom: 1px solid #e1e1e1;
-  max-width:$page-width;
+  max-width: $page-width;
   margin: 0px auto;
 }
 nav a {
@@ -56,8 +59,9 @@ nav a {
   text-decoration: none;
   color: black;
 }
-ol, ul {
-  padding-left:16px;
+ol,
+ul {
+  padding-left: 16px;
 }
 footer {
   padding: 64px 0;
@@ -66,7 +70,7 @@ footer {
 footer .columns {
   display: flex;
   justify-content: space-around;
-  max-width:$page-width;
+  max-width: $page-width;
   margin: 0px auto;
 }
 footer > div {
@@ -78,38 +82,36 @@ main {
 }
 #page {
   display: flex;
-  max-width:$page-width;
+  max-width: $page-width;
   margin: 0px auto;
 }
 #search {
-  flex-grow:1;
-  height:32px;
-  border-radius:8px;
-  border:0px solid #FFF;
+  flex-grow: 1;
+  height: 32px;
+  border-radius: 8px;
+  border: 0px solid #fff;
   background-color: #f2f2f2;
-  padding:8px;
+  padding: 8px;
 }
 .mainBody {
   flex: 1;
-  min-width:0;
+  min-width: 0;
 }
 .sideNav {
   width: 300px;
-  line-height:32px;
-  color:rgb(107, 114, 128);
-  font-size:14px;
+  line-height: 32px;
+  color: rgb(107, 114, 128);
+  font-size: 14px;
 }
 .sideNav .nav-header {
-  font-size:1.2em;
-  margin-bottom:16px;
+  font-size: 1.2em;
+  margin-bottom: 16px;
   padding-left: 0;
 }
-.sideNav *   {
+.sideNav * {
   display: block;
-  color:rgb(107, 114, 128);
-  padding-left:8px;
-
-
+  color: rgb(107, 114, 128);
+  padding-left: 8px;
 }
 .sideNav a:hover {
   background-color: rgb(243, 244, 246);
@@ -121,14 +123,15 @@ main {
 }
 .sideNav div.group {
   margin-left: 16px;
-  border-left:1px solid #CCC;
+  border-left: 1px solid #ccc;
   padding-left: 8px;
 }
 
-.active {
+a.active,
+tabs li.active {
   color: rgb(0, 107, 230);
-  background-color:rgb(240, 247, 255);
-  font-weight:bold;
+  background-color: rgb(240, 247, 255);
+  font-weight: bold;
 }
 .feedback svg {
   height: 24px;
@@ -140,28 +143,39 @@ main {
 
 /* Component Styles */
 tabs li {
-  display:inline;
-  border:1px solid grey;
-  padding:8px;
-  border-radius:8px 8px 0 0;
-  margin-right:-1px;
+  display: inline;
+  border: 1px solid grey;
+  padding: 8px;
+  border-radius: 8px 8px 0 0;
+  margin-right: -1px;
+  border-bottom: none;
+}
+tabs ul {
+  margin-bottom: 4px;
+  margin-left: -16px;
+}
+tabs li.active {
+}
+tabs tab-item {
+  border: 1px solid grey;
+  padding: 16px;
 }
 tabs button {
-  border:0px;
-  background-color:transparent;
-  color:inherit;
+  border: 0px;
+  background-color: transparent;
+  color: inherit;
 }
 tab-item {
   display: none;
 }
 tab-item.active {
-  display:block;
+  display: block;
 }
 
 .callout {
-  display:flex;
-  align-items:center;
-  border-radius:4px;
+  display: flex;
+  align-items: center;
+  border-radius: 4px;
   margin: 16px 0;
 }
 .callout.warning {
