--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -42,6 +42,21 @@ h3,
 h4,
 h5 {
   line-height: 1.2em;
+  &:hover .anchor-icon {
+    opacity: 1;
+  }
+  .anchor-icon {
+    opacity: 0;
+    margin-left:8px;
+    transition: opacity 0.2s ease-in-out;
+  }
+
+}
+h1:hover .anchor-icon {
+  display:none;
+}
+h3 {
+  line-height:64px;
 }
 p {
   margin: 1rem 0;
@@ -173,6 +188,10 @@ tab-item {
 }
 tab-item.active {
   display: block;
+}
+
+h1 .anchor-icon {
+  margin-left:8px;
 }
 
 .callout {
