improved copy and active icons

--- a/src/layouts/Navigation.astro
+++ b/src/layouts/Navigation.astro
@@ -103,5 +103,16 @@ const section = Astro.url.pathname?.match(/\/([^\/]*)\//)?.[1];
     <span>Resources</span>
     <div class="group">
         <a href="/resources/">Resources</a>
+        <a href="/resources/mainnet">Mainnet</a>
+        <a href="/resources/testnet">Testnet</a>
+        <a href="/resources/governance/community-pool-proposals">Community Pool Proposals</a>
+        <a href="/resources/satellite">Satellite</a>
+        <a href="/resources/metamask">Metamask</a>
+        <a href="/resources/keplr">Add Network to Keplr Wallet</a>
+        <a href="/resources/wrapped-tokens">Wrap/unwrap tokens</a>
+        <a href="/bug-bounty">Bug Bounty</a>
+
+
     </div>
+    <span>Learn more about Axelar</span>
 </div>
