--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -42,7 +42,7 @@ const shownTitle = title ? title + ` | Axelar Documentation` : 'Axelar Documenta
   </head>
   <body>
     <nav style="display:flex;">
-      <a href="/" style="color:black;text-decoration:none;font-size:34px;font-weight:bold;font-family:sans-serif"><img src="/images/Axelar Logo Full Black@3x.png" height="25" style="vertical-align:middle;margin-top:-5px"> Docs</a>
+      <a href="/" style="color:black;background-color:transparent;text-decoration:none;font-size:34px;font-weight:bold;font-family:sans-serif"><img src="/images/Axelar Logo Full Black@3x.png" height="25" width="106" style="vertical-align:middle;margin-top:-5px"> Docs</a>
       <a href="/dev/intro">Developers</a>
       <a href="/node/config-node">Node Operators</a>
       <a href="/validator/setup/overview">Validators</a>
