--- a/src/layouts/Navigation.astro
+++ b/src/layouts/Navigation.astro
@@ -116,7 +116,7 @@ const section = Astro.url.pathname?.match(/\/([^\/]*)\//)?.[1];
 {
     (!section) && (
         <div>
-            <div class="nav-header">Other</div>
+            <div class="nav-header">Docs</div>
         </div>
     )
 }
